# backend/src/main/java/com/ninegold/ninegoldapi/entities/GeneratedService.java
@@ -1,0 +1,11 @@
+package com.ninegold.ninegoldapi.entities;
+
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+public class GeneratedService {
+
+  private String downloadLink;
+}
